--- a/viewers/main/viewer/templates/home.html
+++ b/viewers/main/viewer/templates/home.html
@@ -4,6 +4,7 @@
 {% block navbar_nav %}
 <li class="nav-item">
     <a class="nav-link" href="/shipping">Shipping</a>
+    <a class="nav-link" href="/flights">Flights</a>
 </li>
 {% endblock %}
 
