--- a/viewers/main/viewer/templates/flights.html
+++ b/viewers/main/viewer/templates/flights.html
@@ -27,30 +27,30 @@
                 {% for row in flights %}
                 <tr>
                     <th scope="row">{{ row.id }}</th>
-                    <td>{{ row.metadata.properties.underName.properties.name or '' }}</td>
+                    <td>{{ row.metadata.underName.properties.name or '' }}</td>
                     <td>
-                        {{ row.metadata.properties.reservationNumber or ''}}
+                        {{ row.metadata.reservationNumber or ''}}
                     </td>
                     <td>
-                        {{ row.metadata.properties.reservationFor.properties.airline.properties.iataCode or ''}}
-                        {{ row.metadata.properties.reservationFor.properties.flightNumber or ''}}
+                        {{ row.metadata.reservationFor.properties.airline.properties.iataCode or ''}}
+                        {{ row.metadata.reservationFor.properties.flightNumber or ''}}
                     </td>
                     <td>
-                        {{ row.metadata.properties.reservationFor.properties.departureAirport.properties.iataCode or ''}}
-                        {{ row.metadata.properties.reservationFor.properties.departureTerminal or ''}}
-                        {{ row.metadata.properties.reservationFor.properties.departureGate or ''}}
-                        @ {{ row.metadata.properties.reservationFor.properties.departureTime | datetime }}
+                        {{ row.metadata.reservationFor.properties.departureAirport.properties.iataCode or ''}}
+                        {{ row.metadata.reservationFor.properties.departureTerminal or ''}}
+                        {{ row.metadata.reservationFor.properties.departureGate or ''}}
+                        @ {{ row.metadata.reservationFor.properties.departureTime | datetime }}
                     </td>
                     <td>
-                        {{ row.metadata.properties.reservationFor.properties.arrivalAirport.properties.iataCode or '' }}
-                        @ {{ row.metadata.properties.reservationFor.properties.arrivalTime | datetime }}
+                        {{ row.metadata.reservationFor.properties.arrivalAirport.properties.iataCode or '' }}
+                        @ {{ row.metadata.reservationFor.properties.arrivalTime | datetime }}
                     </td>
                     <td>
-                        {{ row.metadata.properties.airplaneSeat or '' }}
+                        {{ row.metadata.airplaneSeat or '' }}
                     </td>
                     <td>
-                        {% if row.metadata.properties.ticketToken %}
-                            {% set codeSplit = row.metadata.properties.ticketToken.split(':') %}
+                        {% if row.metadata.ticketToken %}
+                            {% set codeSplit = row.metadata.ticketToken.split(':') %}
                             {% if codeSplit | length > 1 %}
                                 <img src="http://bwipjs-api.metafloor.com/?bcid={{ codeSplit[0] | lower }}&text={{ codeSplit[1] }}" />
                             {% endif %}
